 + New call: SetAmmoDescriptionAppendix(ammoType, descAppend) -- Append a custom text to the description of an ammo type without overwriting it
 + New call: GetHogFort(gearUid) -- Returns the name of the fort of the hog's team
 + New call: PlaceRubber(x, y, frameIdx) -- Places a rubber
 + New hook: onVisualGearAdd(vgUid) -- called when a visual gear is added
 + New hook: onVisualGearDelete(vgUid) -- called when a visual gear is deleted
 + New hook: onUsedAmmo(ammoType) -- called when ammo has been finished using (e.g. after both shotgun shots)
 + New variable: AirMinesNum -- Number of air mines being placed on a medium-sized map
 + New variable: WorldEdge -- World edge type (weNone, weWrap, weBounce, weSea)
 + Locale library: loc_noop -- Mark string for translation but don't translate it
 + Animate library: AnimInit([startAnimating]) -- New parameter startAnimating: if true, will start game in cinematic mode with most controls disabled. Must play an animation after that
 * Removed call: SetAmmoStore -- Old undocumented function of questional use, has never been used

0.9.21 -> 0.9.22
 + New Weapon / Map object: AirMine (floating mine that will follow nearby hedgehogs)
 + Extensive changes to TechRacer: Variable terrain types, enhanced parameters, hwmap interpreter, fuel limiter, etc. 
 + HedgeEditor - create missions/etc. in-game! see http://hedgewars.org/HedgeEditor
 + Map previews can now take script parameters into account and preview waypoints in TechRacer
 + Added a couple new flags
 + Various tweaks to the interface and in-game chat
 + Divided teams options will now just be ignored when more/less than 2 teams/clans, instead of displaying a fatal error
 + Added 6 TechRacer maps to TechMaps
 + Added 3 SpeedShoppa Challenges: Shoppa Love, Ropes and Crates, The Customer is King
 + Hammer damage is now rounded up. This means it can be used to execute hedgehogs with only 1 hp.
 + Improved "Art" theme.